tests/golden/err-import-cycle/expected_error.txt
error: 循環 import を検出しました: a.clum -> b.clum -> a.clum
 --> b.clum:1:3
  |
1 | @ ./a
  |   ^^^
